@@ -1,6 +1,8 @@
 1.1.34-beta1
 - Fix Issue #208: ActionBar hide first few lines.
-
+- Fix Issue #206: Always hide the ZoomControl button, zooming feature still working using 2 finger pinch
+- Fix Issue #205: Disable ToolBar if not supported on Settings page.
+- Fix Issue #204: Chapter Listing is not updated when resuming.
 
 1.1.33
 - Update Issue#199: Add touch listener for toolbar when in fullscreen mode.
